# sim-skills

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md
_tools/gui/: SKILL.md
ansa/: .gitignore  SKILL.md  known_issues.md  pytest.ini
ansa/base/: known_issues.md
ansa/docs/: ansa_final_report.md  ansa_investigation_summary.md  ansa_runtime_dev_report.md
calculix/: SKILL.md
cantera/: SKILL.md
cfx/: SKILL.md
comsol/: SKILL.md
comsol/doc-search/: .gitignore  README.md  pyproject.toml
comsol/doc-search/src/sim_comsol_doc/: __init__.py  cli.py  discover.py  searcher.py
coolprop/: SKILL.md
devito/: SKILL.md
elmer/: SKILL.md
fipy/: SKILL.md
flotherm/: .gitignore  SKILL.md  known_issues.md  pytest.ini
fluent/: SKILL.md
fluent/doc-search/: README.md  pyproject.toml
fluent/doc-search/src/sim_fluent_doc/: __init__.py  cli.py  discover.py  searcher.py
gmsh/: SKILL.md
hypermesh/: SKILL.md
icem/: SKILL.md
isaac/: SKILL.md
lammps/: SKILL.md
lsdyna/: SKILL.md
ltspice/: SKILL.md
mapdl/: .gitignore  SKILL.md
matlab/: SKILL.md
matlab/doc-search/: README.md  pyproject.toml
matlab/doc-search/src/sim_matlab_doc/: __init__.py  cli.py  discover.py  searcher.py
mechanical/: SKILL.md
meshio/: SKILL.md
newton/: SKILL.md
openfoam/: SKILL.md
openmdao/: SKILL.md
openseespy/: SKILL.md
pandapower/: SKILL.md
paraview/: SKILL.md
pybamm/: SKILL.md
pymfem/: SKILL.md
pymoo/: SKILL.md
pyomo/: SKILL.md
pyvista/: SKILL.md
scikit_fem/: SKILL.md
scikit_rf/: SKILL.md
sfepy/: SKILL.md
sim-cli/: SKILL.md
simpy/: SKILL.md
starccm/: SKILL.md
su2/: SKILL.md
trimesh/: SKILL.md
workbench/: SKILL.md
(+729 files in other folders)
